--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -57,30 +57,30 @@ jobs:
           reporter: "github-pr-review"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      - name: Test with pytest
-        run: |
-          pip install pytest
-          # pytest
-          pip install pytest-cov
-          pytest --cov=./ --cov-report=xml
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v1
-        with:
-          token: ${{ secrets.CODECOV_TOKEN }}
-          file: ./coverage.xml
-          flags: unittests
+      # - name: Test with pytest
+      #   run: |
+      #     pip install pytest
+      #     # pytest
+      #     pip install pytest-cov
+      #     pytest --cov=./ --cov-report=xml
+      # - name: Upload coverage to Codecov
+      #   uses: codecov/codecov-action@v1
+      #   with:
+      #     token: ${{ secrets.CODECOV_TOKEN }}
+      #     file: ./coverage.xml
+      #     flags: unittests
 
       - name: vulernability check in dependcies
         run: |
           pip install safety
           safety check --full-report
           
-      # - name: Run Snyk to check for vulnerabilities
-      #   uses: snyk/actions/node@master
-      #   env:
-      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      # - name: SonarCloud scanner
-      #   uses: sonarsource/sonarcloud-github-action@master
-      #   env:
-      #     GITHUB_TOKEN: ${​{ secrets.GITHUB_TOKEN }}
-      #     SONAR_TOKEN: ${​{ secrets.SONAR_TOKEN }}
+      - name: Run Snyk to check for vulnerabilities
+        uses: snyk/actions/node@master
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      - name: SonarCloud scanner
+        uses: sonarsource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${​{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${​{ secrets.SONAR_TOKEN }}
