--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -75,12 +75,12 @@ jobs:
           pip install safety
           safety check --full-report
           
-      - name: Run Snyk to check for vulnerabilities
-        uses: snyk/actions/node@master
-        env:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
-      - name: SonarCloud scanner
-        uses: sonarsource/sonarcloud-github-action@master
-        env:
-          # GITHUB_TOKEN: ${​{ secrets.GITHUB_TOKEN }}
-          SONAR_TOKEN: ${​{ secrets.SONAR_TOKEN }}
+      # - name: Run Snyk to check for vulnerabilities
+      #   uses: snyk/actions/node@master
+      #   env:
+      #     SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+      # - name: SonarCloud scanner
+      #   uses: sonarsource/sonarcloud-github-action@master
+      #   env:
+      #     # GITHUB_TOKEN: ${​{ secrets.GITHUB_TOKEN }}
+      #     SONAR_TOKEN: ${​{ secrets.SONAR_TOKEN }}
