fixes: removed unused libs; code formatting; added docstrings; removed unused method;

--- a/config_template.yaml
+++ b/config_template.yaml
@@ -11,4 +11,6 @@ listening_mac: "77:88:99:aa:bb:cc"
 
 from_mail: "from_name@mydoamin.local"
 to_mail: "to_name@mydoamin.local"
+enable_mail: <True/False>
+
 
