multiple_ips_list: savepoint: change listening_ip and listening_mac into a list of strings

--- a/config_template.yaml
+++ b/config_template.yaml
@@ -6,8 +6,10 @@ wait_time: 45
 listening_name: 
   - "server.fritz.box"
   - "server.mydomain.local"
-listening_ip: "10.2.2.2"
-listening_mac: "77:88:99:aa:bb:cc"
+listening_ip: 
+  - "10.2.2.2"
+listening_mac: 
+  - "77:88:99:aa:bb:cc"
 
 from_mail: "from_name@mydoamin.local"
 to_mail: "to_name@mydoamin.local"
