--- a/config_template.yaml
+++ b/config_template.yaml
@@ -1,13 +1,17 @@
 version: 1
-own_ip: "10.1.1.1"
-own_mac: "11:22:33:44:55:66"
+
+blocked_ip:
+  - "10.1.1.1"
+  - "10.1.1.2"
 wait_time: 45
 
-listening_name: 
-  - "server.fritz.box"
-  - "server.mydomain.local"
-listening_ip: "10.2.2.2"
-listening_mac: "77:88:99:aa:bb:cc"
+monitoring:
+  - dns_name: "server.fritz.box"
+    ip: "10.2.2.2"
+    mac: "77:88:99:aa:bb:cc"
+  - dns_name: "server.mydomain.local"
+    ip: "10.2.2.2"
+    mac: "77:88:99:aa:bb:cc"
 
 from_mail: "from_name@mydoamin.local"
 to_mail: "to_name@mydoamin.local"
